2023-02-25  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_runtests.m: Optionnally, save the result to a mat-file

	* misc/test/stk_runtests.m: Optionnally, save the result to a
	mat-file and log the ouput to a diary.

2023-01-14  Julien Bect  <julien.bect@centralesupelec.fr>

	htmldoc: Increase font size to 16px

	* admin/htmldoc/stk.css: Increase font size to 16px.

2023-01-09  Julien Bect  <julien.bect@centralesupelec.fr>

	Simplify HTML doc build

	* admin/build_tools/generate_htmldoc.m: Remove `flavour` option.
	* build.m: Propagate.
	* admin/build_tools/build_allpurpose_htmldoc.m: Propagate.

2023-01-06  Julien Bect  <julien.bect@centralesupelec.fr>

	Simplify build process

	* Makefile: Remove the distinction between the github release and
	the Octave Forge release.  There is only one release now, the
	github one (still with two tarballs).
	* admin/build_tools/build_allpurpose.m: Update paths.
	* admin/build_tools/build_octpkg.m: Idem.
	* .github/workflows/run-tests.yml: Idem.

	Raise minimal (tested) Matlab version number to R2014a

	* README.md: Raise minimal (tested) Matlab version number to R2014a.
	* NEWS.md: Advertise the change.

2023-01-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Raise required Octave version number to 4.0.1

	* README.md: Raise required Octave version number to 4.0.1.
	* admin/build_tools/build_octpkg.m: Idem.
	* admin/CODING_GUIDELINES: Update.
	* NEWS.md: Advertise the change.

	Update quilt patches

	* admin/octpkg/patches/matlab-graphics-axis-Axes.patch: Update patch.
	* admin/octpkg/patches/prevent-PKG_ADD-loop.patch: Idem.
	* admin/octpkg/patches/prevent-PKG_DEL-loop.patch: Idem.
	* admin/octpkg/patches/remove-buildmex.patch: Idem.
	* admin/octpkg/patches/remove-testprivatemex.patch: Idem.
	* admin/octpkg/patches/stk-init-mole-delete.patch: Idem.
	* admin/octpkg/patches/stk-init-rmpath-cleanup.patch: Idem.
	* admin/octpkg/patches/workaround-octave-bug-46350.patch: Idem.
